--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@aws-amplify/ui-react": "~6.13.2",
-    "aws-amplify": "~6.15.10",
+    "@aws-amplify/ui-react": "^6.14.0",
+    "@supabase/supabase-js": "^2.95.3",
+    "aws-amplify": "^6.16.2",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.563.0",
     "react": "~18.3.1",
     "react-dom": "~18.3.1",
-    "react-router-dom": "^7.13.0"
+    "react-hook-form": "^7.71.1",
+    "react-router-dom": "^7.13.0",
+    "recharts": "^3.7.0",
+    "tailwind-merge": "^3.4.0"
   },
   "engines": {
     "node": ">= 20.20.0",
@@ -24,6 +31,7 @@
     "@eslint/compat": "~2.0.1",
     "@eslint/eslintrc": "~3.3.3",
     "@eslint/js": "~9.39.2",
+    "@types/node": "^25.2.2",
     "@types/react": "~18.3.27",
     "@types/react-dom": "~18.3.7",
     "@typescript-eslint/eslint-plugin": "~8.53.0",
